--- a/IDN303G24_Skilaverkefni_3.ipynb
+++ b/IDN303G24_Skilaverkefni_3.ipynb
@@ -23,15 +23,20 @@
         "\n",
         "Á Mynd 1 má sjá blokkrit fyrir kerfið. R(s) er óskgildi vatnshæðarinnar, E(s) er mismunur á óskgildi og mældu gildi, U(s) er opnun lokans, Q(s) er innflæði, T(s) er truflun og H(s) er vatnshæðin. Athugið að í öllum tilfellum er um að ræða breytingar frá jafnvægispunkti.\n",
         "\n",
+        "<div>\n",
+        "<img src=\"https://github.com/rsaemundsson/idn_303_TS_24/blob/main/s3_blokkrit.png?raw=true\" alt=\"Mynd vantar\" width=600/>\n",
+        "\n",
+        "Mynd 1. Blokkrit af kerfi til að stýra vatnshæð í tanki.\n",
+        "\n",
+        "\n",
         "Yfirfærsluföll fyrir mismunandi einingar kerfisins eru eftirfarandi:\n",
         "\n",
         "<center>$G_{Stýring}(s)=K_P$</center>\n",
-        "\n",
-        "\n",
+        "<br>\n",
         "<center>$G_{Loki} (s)=\\frac{K_L}{\\tau_L s + 1}$</center>\n",
-        "\n",
+        "<br>\n",
         "<center>$G_{Tankur}(s)=\\frac{K_T}{\\tau_Ts + 1}$</center>\n",
-        "\n",
+        "<br>\n",
         "<center>$G_{Nemi}(s)=1$</center>\n",
         "\n",
         "Við útreikninga má gera ráð fyrir að $K_L = 1/60$, $\\tau_L = 1$s, $K_T=2800$ og $\\tau_T=250s$.\n",
