--- a/IDN303G24_Skilaverkefni_4.ipynb
+++ b/IDN303G24_Skilaverkefni_4.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rsaemundsson/idn_303_TS_24/blob/main/IDN303G24_Skilaverkefni_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "6e9351db",
       "metadata": {
         "id": "6e9351db"
@@ -54,8 +44,8 @@
         "Kerfið þarf að vera stöðugt og lokinn ræður ekki við stærri breytingar en 10° (stýrimerki). Við hönnun stýringarinnar er hægt að miða við að truflun breytist um 10 mm. Ekki er víst að nákvæmlega sömu gildin séu notuð við prófanir. Athugið líka að stuðlar kerfisins eru í SI einingum en mögulega eru aðrar einingar notaðar við prófanir.\n",
         "\n",
         "1. Veljið $K_P$ þannig að hönnunarmarkmið náist sem best, þ.m.t. að stýrimerki sé innan marka. Athugið að stuðlar eru ekki allir þeir sömu og í Skilaverkefni 3.\n",
-        "2. Prófið stýringuna með völdu gildi á $K_P$ í tilraunaaðstöðu í VR-III (vinnulýsing á staðnum). Endurbætið stýringuna með því að velja nýtt gildi eftir að hafa fylgst með niðurstöðunum.\n",
-        "3. Berið saman útreikninga og mælingar. Túlkið og dragið ályktanir um gæði líkans og val ykkar á $K_P$.\n",
+        "2. Prófið stýringuna með völdu gildi á $K_P$ í tilraunaaðstöðu í VR-III (vinnulýsing á staðnum). Endurbætið stýringuna með því að velja nýtt gildi eftir að hafa fylgst með árangri stýringarinnar með valda gildinu ykkar.\n",
+        "3. Berið svörun líkana (fyrir valið og endurbætt gildi) við mælingar, bæði myndrænt og tölulega. Túlkið og dragið ályktanir um gæði líkans og val ykkar á $K_P$.\n",
         "4. Setjið fram niðurstöður í Colab skjali (eða jupiter notebook) þar sem þið blandið saman texta, jöfnum og kóða. Skjalið skal hafa eftirfarandi hluta:\n",
         "<ul>\n",
         "<li>Inngangur - þar sem þið lýsið markmiðum verkefnisins og hönnunarkröfum.</li>\n",
@@ -90,8 +80,7 @@
       "version": "3.9.7"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
